--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Anand Singh</title>
+</head>
+<body>
+    <h1>Welcome to My Website 🚀</h1>
+    <p>This is my free website hosted on GitHub.</p>
+</body>
+</html>
